WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231687
[LFC][IFC] Preserved tab is not a word separator
https://bugs.webkit.org/show_bug.cgi?id=231687
Summary
[LFC][IFC] Preserved tab is not a word separator
alan
Reported
2021-10-13 11:13:12 PDT
should not treat like one
Attachments
Patch
(8.65 KB, patch)
2021-10-13 11:28 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-10-13 11:28:19 PDT
Created
attachment 441112
[details]
Patch
EWS
Comment 2
2021-10-13 14:40:40 PDT
Committed
r284127
(
242947@main
): <
https://commits.webkit.org/242947@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 441112
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-10-13 14:41:19 PDT
<
rdar://problem/84217706
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug