[LFC][IFC] Preserved tab is not a word separator https://bugs.webkit.org/show_bug.cgi?id=231687

Reviewed by Antti Koivisto.

Source/WebCore:

The 'tab' character is not considered a word separator in the word-spacing sense. When the preserved whitespace sequence
has the mix of word separators (regular space) and non-separators, we use incorrect 'x' position to compute the width of the 'tab' character (tab width is position sensitive).
This patch fixes it by splitting the whitespace sequence at word-separator boundary (e.g [space][space][tab] will produce 2 individual InlineTextItems [space][space] and [tab]).

Test: fast/text/preserved-white-space-with-word-spacing.html

* layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::candidateContentForLine):
* layout/formattingContexts/inline/InlineTextItem.cpp:
(WebCore::Layout::moveToNextNonWhitespacePosition):
(WebCore::Layout::InlineTextItem::createAndAppendTextItems):

LayoutTests:

* fast/text/preserved-white-space-with-word-spacing-expected.html: Added.
* fast/text/preserved-white-space-with-word-spacing.html: Added.


Canonical link: https://commits.webkit.org/242947@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284127 268f45cc-cd09-0410-ab3c-d52691b4dbfc